data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3603.wast
;; 2. **Test Type Mismatch in Call Arguments**:    - **Description**: Use the `call x` instruction with arguments that do not match the expected types of the function being called.    - **Constraint**: The types of arguments pushed on the stack do not match the function's parameter types.    - **Relation to CFG**: An inconsistent CFG may fail to detect the type mismatch, causing invalid execution paths.

(assert_invalid
  (module
    (type (func (param i32 f64)))
    (func $test (param i32)
      (call 0 (i32.const 42)) ;; Intentionally missing the f64 parameter.
    )
  )
  "type mismatch"
)